--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "discord-bot",
-  "productName": "Discord Bot - Controls",
-  "version": "1",
-  "description": "Discord Bot - Controls",
-  "main": "bot.js",
-  "author": {
-    "name": "DBC"
+  "name": "myapp",
+  "description": "a really cool app",
+  "version": "1.0.0",
+  "engines": {
+    "node": "12.x"
   },
   "scripts": {
     "start": "node bot.js"
